# ssh-agent-client-rs

./: Cargo.toml  README.md
.circleci/: config.yml
.github/workflows/: rust.yml  rust_win_git_bash.yml
examples/: add.rs  list.rs  remove.rs  removeall.rs  verify.rs
src/: bits.rs  codec.rs  error.rs  lib.rs  testutil.rs
tests/: bits.rs  client.rs
tests/data/: README.md  create.sh  id_dsa  id_dsa.pub  id_ecdsa  id_ecdsa.pub  id_ed25519_for_cert  id_ed25519_for_cert-cert.pub  id_ed25519_for_cert.pub  id_rsa  id_rsa.pub
tests/examples/: id_dsa.pub  id_ecdsa_p256.pub  id_ecdsa_p521.pub  id_ed25519.pub  id_rsa.pub
tests/mock/: mod.rs
