[package]
name = "ssh-agent-client-rs"
version = "0.9.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nresare/ssh-agent-client-rs"
description = """
Pure rust implementation of the ssh-agent protocol. It can be used to write clients that interact with the ssh agent.
"""
edition = "2021"

[dependencies]
bytes = "1.5.0"
ssh-key = { version = "0.6.2", features = ["crypto"] }
ssh-encoding = "0.2.0"
signature = "2.1.0"
thiserror = "1.0.49"

[dev-dependencies]
getrandom = "0.2.10"
