[package]
name = "ssh-agent-client-rs"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nresare/ssh-agent-client-rs"
description = """
Pure rust implementation of the ssh-agent protocol. It can be used to write clients that interact with the ssh agent.
"""
edition = "2021"

[dependencies]
bytes = "1.10.1"
ssh-key = { version = "0.6.7", features = ["crypto"] }
ssh-encoding = "0.2.0"
signature = "2.2.0"
thiserror = "2.0.12"

[dev-dependencies]
rand = "0.9.1"

[target.'cfg(windows)'.dependencies]
interprocess = "2.2.3"